--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,10 @@
+<!-- 
+  Hello, this project is developed by Cloyd Van 
+  My Github profile: https://github.com/Ciezo
+  My LinkedIN profile: https://www.linkedin.com/in/cloydvansecuya/ 
+
+  This web-app is made with React.js using `create-react-app`
+ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,20 +31,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Inkdown</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
